--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "bin": {
     "svm-gen": "svm-gen.js",
-    "svm-test": "svm-test.js",
+    "svm-test": "svm-test.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "http://usability.inform-ac.com:7990/stash/scm/m/svm-tools.git"
+  },
+  "author": "Jonathan Diehl",
+  "license": "Copyright",
   "dependencies": {
     "async": "^0.9.0",
     "fast-csv": "^0.5.5",
