made svm-tools scriptable

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "fast-csv": "^0.5.5",
     "for-each": "^0.3.2",
     "minimist": "^1.1.0",
-    "progress": "^1.1.8"
+    "npm": "^2.7.4",
+    "progress": "^1.1.8",
+    "q": "^1.2.0",
+    "tmp": "0.0.25"
   }
 }
