--- a/.jshintrc
+++ b/.jshintrc
@@ -79,5 +79,5 @@
   "yui"           : false,    // Yahoo User Interface
 
   // Custom Globals
-  "predef"       : [ ]
+  "predef"       : [ "JSON" ]
 }
